--- a/Cuestionario.html
+++ b/Cuestionario.html
@@ -1,6 +1,465 @@
 <html>
-    <head></head>
-    <body>
-        <h1>Bienvenido a el Cuestionario</h1>
-    </body>
+
+<head>
+    <title>Cuestionario de ingles</title>
+    <link rel="stylesheet" href="./cuestionario.css">
+    <script src="./nota.js"></script>
+</head>
+
+<body>
+    <img src="./pexels-hlorsdemir-31573401.jpg" alt="">
+    <h1>Bienvenido a el Cuestionario</h1>
+    <br><br>
+    <div class="explicacion">
+        <h3>Pronombres en Inglés</h3>
+        <br>
+        <ul>
+            <strong>I (yo)</strong>
+            <br><br>
+            <strong>You (tú / usted)</strong>
+            <br><br>
+            <strong>He (él)</strong>
+            <br><br>
+            <strong>She (ella)</strong> 
+            <br><br>
+            <strong>It (eso / esto)</strong>
+            <br><br>
+            <strong>We (nosotros)</strong>
+            <br><br>
+            <strong>They (ellos)</strong>
+            <br><br>
+        </ul>
+        <br>
+        <h3>Reglas de la Tercera Persona del Singular</h3>
+        <br>
+        <p>Cuando se utiliza un verbo con los pronombres de tercera persona del singular (he, she, it), se deben seguir
+            las
+            siguientes reglas:</p>
+            <br>
+        <ul>
+            <li>Se añade <strong>-s</strong> al final del verbo: <br> Ejemplo: <strong>He plays football.</strong></li>
+            <br>
+            <li>Si el verbo termina en <strong>-o</strong>, <strong>-ch</strong>, <strong>-sh</strong>,
+                <strong>-ss</strong>, <strong>-x</strong> o <strong>-z</strong>, se añade <strong>-es</strong>: <br>
+                Ejemplo: <strong>She watches TV.</strong>
+            </li>
+            <br>
+            <li>Si el verbo termina en consonante + <strong>-y</strong>, se cambia la <strong>-y</strong> por
+                <strong>-ies</strong>: <br> Ejemplo: <strong>He studies every day.</strong>
+            </li>
+            <br>
+            <li>Si el verbo termina en vocal + <strong>-y</strong>, se añade solo <strong>-s</strong>: <br> Ejemplo:
+                <strong>She
+                    plays the piano.</strong></li>
+        </ul>
+    </div>
+    <div class="cuestionario">
+        <div class="pregunta">
+            <p>1) John ………………. Breakfast at six o’clock in the morning.</p>
+            <input type="radio" id="q1_option_a" name="q1" value="a"> a) Eats <br>
+            <input type="radio" id="q1_option_b" name="q1" value="b"> b) Eates <br>
+            <input type="radio" id="q1_option_c" name="q1" value="c"> c) does <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>2) ……………. You like to study English? B: Yes, I do</p>
+            <input type="radio" id="q2_option_a" name="q2" value="a"> a) DOES <br>
+            <input type="radio" id="q2_option_b" name="q2" value="b"> b) DO <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>3) What ………. you do in your free time? B: I like to read books.</p>
+            <input type="radio" id="q3_option_a" name="q3" value="a"> a) DO <br>
+            <input type="radio" id="q3_option_b" name="q3" value="b"> b) DOES <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>4) Do you like to read ……?</p>
+            <input type="radio" id="q4_option_a" name="q4" value="a"> a) BOOK <br>
+            <input type="radio" id="q4_option_b" name="q4" value="b"> b) BOOKS <br>
+            <input type="radio" id="q4_option_c" name="q4" value="c"> c) BOOES <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>5) …….. she jump?</p>
+            <input type="radio" id="q5_option_a" name="q5" value="a"> a) Do <br>
+            <input type="radio" id="q5_option_b" name="q5" value="b"> b) Does <br>
+            <input type="radio" id="q5_option_c" name="q5" value="c"> c) eats <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>6) ……. he swim?</p>
+            <input type="radio" id="q6_option_a" name="q6" value="a"> a) Does <br>
+            <input type="radio" id="q6_option_b" name="q6" value="b"> b) Do <br>
+            <input type="radio" id="q6_option_c" name="q6" value="c"> c) Have <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>7) Dan …….. coffee.</p>
+            <input type="radio" id="q7_option_a" name="q7" value="a"> a) LOVE <br>
+            <input type="radio" id="q7_option_b" name="q7" value="b"> b) LOVES <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>8) Ian ………. in a big house in Bristol.</p>
+            <input type="radio" id="q8_option_a" name="q8" value="a"> a) LIVES <br>
+            <input type="radio" id="q8_option_b" name="q8" value="b"> b) LIVE <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>9) Peter ……. two cats and a dog.</p>
+            <input type="radio" id="q9_option_a" name="q9" value="a"> a) HAVE <br>
+            <input type="radio" id="q9_option_b" name="q9" value="b"> b) HAS <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>10) My parents ……. long hours.</p>
+            <input type="radio" id="q10_option_a" name="q10" value="a"> a) WORKS <br>
+            <input type="radio" id="q10_option_b" name="q10" value="b"> b) WORK <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>11) My friends and I sometimes …… parties on Saturday evenings.</p>
+            <input type="radio" id="q11_option_a" name="q11" value="a"> a) Have <br>
+            <input type="radio" id="q11_option_b" name="q11" value="b"> b) Has <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>12) The Earth …….. round the Sun.</p>
+            <input type="radio" id="q12_option_a" name="q12" value="a"> a) Go <br>
+            <input type="radio" id="q12_option_b" name="q12" value="b"> b) goes <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>13) Josh ……… articles for The New York Times.</p>
+            <input type="radio" id="q13_option_a" name="q13" value="a"> a) Writes <br>
+            <input type="radio" id="q13_option_b" name="q13" value="b"> b) write <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>14) I ….. meeting new people.</p>
+            <input type="radio" id="q14_option_a" name="q14" value="a"> a) Like <br>
+            <input type="radio" id="q14_option_b" name="q14" value="b"> b) Likes <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>15) Greg always ……. people in trouble.</p>
+            <input type="radio" id="q15_option_a" name="q15" value="a"> a) Help <br>
+            <input type="radio" id="q15_option_b" name="q15" value="b"> b) helps <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>16) My father ……… on business every month.</p>
+            <input type="radio" id="q16_option_a" name="q16" value="a"> a) Travel <br>
+            <input type="radio" id="q16_option_b" name="q16" value="b"> b) traverls <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>17) Sarah …….. the piano.</p>
+            <input type="radio" id="q17_option_a" name="q17" value="a"> a) Plays <br>
+            <input type="radio" id="q17_option_b" name="q17" value="b"> b) play <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>18) Harry ………. dancing with his friends on Fridays.</p>
+            <input type="radio" id="q18_option_a" name="q18" value="a"> a) GO <br>
+            <input type="radio" id="q18_option_b" name="q18" value="b"> b) GOES <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>19) Mandy ……. horror movies.</p>
+            <input type="radio" id="q19_option_a" name="q19" value="a"> a) Love <br>
+            <input type="radio" id="q19_option_b" name="q19" value="b"> b) loves <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>20) She ..... at Harvard.</p>
+            <input type="radio" id="q20_option_a" name="q20" value="a"> a) Teaches <br>
+            <input type="radio" id="q20_option_b" name="q20" value="b"> b) teache <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>21) We always ……. at the same hotel.</p>
+            <input type="radio" id="q21_option_a" name="q21" value="a"> a) Stays <br>
+            <input type="radio" id="q21_option_b" name="q21" value="b"> b) Stay <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>22) Grandpa ..... the newspaper every morning.</p>
+            <input type="radio" id="q22_option_a" name="q22" value="a"> a) Read <br>
+            <input type="radio" id="q22_option_b" name="q22" value="b"> b) Reads <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>23) I …….. know.</p>
+            <input type="radio" id="q23_option_a" name="q23" value="a"> a) Don’t <br>
+            <input type="radio" id="q23_option_b" name="q23" value="b"> b) Doesn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>24) Mom …….. like sushi.</p>
+            <input type="radio" id="q24_option_a" name="q24" value="a"> a) Don’t <br>
+            <input type="radio" id="q24_option_b" name="q24" value="b"> b) Doesn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>25) Craig ………… a cell phone.</p>
+            <input type="radio" id="q25_option_a" name="q25" value="a"> a) doesn’t have <br>
+            <input type="radio" id="q25_option_b" name="q25" value="b"> b) don’t has <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>26) They …….. to town often.</p>
+            <input type="radio" id="q26_option_a" name="q26" value="a"> a) doesn’t comes <br>
+            <input type="radio" id="q26_option_b" name="q26" value="b"> b) don’t come <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>27) We ……. Usually eat out.</p>
+            <input type="radio" id="q27_option_a" name="q27" value="a"> a) don’t <br>
+            <input type="radio" id="q27_option_b" name="q27" value="b"> b) doesn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>28) Cynthia ………….. much TV.</p>
+            <input type="radio" id="q28_option_a" name="q28" value="a"> a) don’t watches <br>
+            <input type="radio" id="q28_option_b" name="q28" value="b"> b) doesn’t watch <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>29) An atheist ……………… in God.</p>
+            <input type="radio" id="q29_option_a" name="q29" value="a"> a) don’t believes <br>
+            <input type="radio" id="q29_option_b" name="q29" value="b"> b) doesn’t believe <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>30) I ……. usually ……… tea.</p>
+            <input type="radio" id="q30_option_a" name="q30" value="a"> a) don’t - drink <br>
+            <input type="radio" id="q30_option_b" name="q30" value="b"> b) doesn’t - drinks <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>31) He …………….. any foreign language.</p>
+            <input type="radio" id="q31_option_a" name="q31" value="a"> a) doesn’t speak <br>
+            <input type="radio" id="q31_option_b" name="q31" value="b"> b) don’t speaks <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>32) Amy never……… to school on time.</p>
+            <input type="radio" id="q32_option_a" name="q32" value="a"> a) Gets <br>
+            <input type="radio" id="q32_option_b" name="q32" value="b"> b) get <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>33) Sidney ……… a doctor.</p>
+            <input type="radio" id="q33_option_a" name="q33" value="a"> a) Isn’t <br>
+            <input type="radio" id="q33_option_b" name="q33" value="b"> b) Isesn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>34) We …… often visit them.</p>
+            <input type="radio" id="q34_option_a" name="q34" value="a"> a) doesn’t <br>
+            <input type="radio" id="q34_option_b" name="q34" value="b"> b) don’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>35) I …….. usually catch the train.</p>
+            <input type="radio" id="q35_option_a" name="q35" value="a"> a) Don’t <br>
+            <input type="radio" id="q35_option_b" name="q35" value="b"> b) Doesn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>36) The teacher …….. patient.</p>
+            <input type="radio" id="q36_option_a" name="q36" value="a"> a) isesn’t <br>
+            <input type="radio" id="q36_option_b" name="q36" value="b"> b) isn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>37) I never ……. the dishes after dinner.</p>
+            <input type="radio" id="q37_option_a" name="q37" value="a"> a) Do <br>
+            <input type="radio" id="q37_option_b" name="q37" value="b"> b) does <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>38) We ……….. out much.</p>
+            <input type="radio" id="q38_option_a" name="q38" value="a"> a) doesn’t goes <br>
+            <input type="radio" id="q38_option_b" name="q38" value="b"> b) don’t go <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>39) John …… a vegetarian.</p>
+            <input type="radio" id="q39_option_a" name="q39" value="a"> a) isn’t <br>
+            <input type="radio" id="q39_option_b" name="q39" value="b"> b) isesn’t <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>40) They ……… their car.</p>
+            <input type="radio" id="q40_option_a" name="q40" value="a"> a) doesn’t uses <br>
+            <input type="radio" id="q40_option_b" name="q40" value="b"> b) don’t use <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>41) I ……… the news.</p>
+            <input type="radio" id="q41_option_a" name="q41" value="a"> a) don’t hear <br>
+            <input type="radio" id="q41_option_b" name="q41" value="b"> b) doesn’t hears <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>42) Dad ……….. from home.</p>
+            <input type="radio" id="q42_option_a" name="q42" value="a"> a) don’t works <br>
+            <input type="radio" id="q42_option_b" name="q42" value="b"> b) doesn’t work <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>43) They ………….. much spare time.</p>
+            <input type="radio" id="q43_option_a" name="q43" value="a"> a) don’t have <br>
+            <input type="radio" id="q43_option_b" name="q43" value="b"> b) doesn’t has <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>44) Mike never …….. the phone.</p>
+            <input type="radio" id="q44_option_a" name="q44" value="a"> a) Answer <br>
+            <input type="radio" id="q44_option_b" name="q44" value="b"> b) answers <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>45) I never …… to bed before 11 p. m.</p>
+            <input type="radio" id="q45_option_a" name="q45" value="a"> a) Go <br>
+            <input type="radio" id="q45_option_b" name="q45" value="b"> b) go <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>46) I ………… to miss anything.</p>
+            <input type="radio" id="q46_option_a" name="q46" value="a"> a) doesn’t wants <br>
+            <input type="radio" id="q46_option_b" name="q46" value="b"> b) don’t want <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>47) Lisa ………… skiing every winter.</p>
+            <input type="radio" id="q47_option_a" name="q47" value="a"> a) doesn’t go <br>
+            <input type="radio" id="q47_option_b" name="q47" value="b"> b) don’t goes <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>48) My grandparents ………. much.</p>
+            <input type="radio" id="q48_option_a" name="q48" value="a"> a) doesn’t sleep <br>
+            <input type="radio" id="q48_option_b" name="q48" value="b"> b) don’t sleep <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>49) Bob ……….. up early.</p>
+            <input type="radio" id="q49_option_a" name="q49" value="a"> a) doesn’t wake <br>
+            <input type="radio" id="q49_option_b" name="q49" value="b"> b) don’t wakes <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="pregunta">
+            <p>50) He …………… on the road at night.</p>
+            <input type="radio" id="q50_option_a" name="q50" value="a"> a) don’t drives <br>
+            <input type="radio" id="q50_option_b" name="q50" value="b"> b) doesn’t drive <br>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <button class="verificar" onclick="verificarRespuestas()">Verificar</button>
+    </div>
+</body>
+
 </html>
