--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Cuestionario de ingles</title>
+        <title>Inicio de sesion</title>
         <link rel="stylesheet" href="./iniciodesesion.css" type="text/css">
         <script src="./iniciodesesion.js "></script>
     </head>
@@ -16,7 +16,7 @@
             <br>
             <input type="password" id="contraseña" placeholder="********">
             <br><br>
-            <button id="ingresar" onclick="validar()">  Ingresar</button>
+            <button id="ingresar" onclick="validar();">  Ingresar</button>
         </div>
     </body>
 </html>
