--- a/Cuestionario.html
+++ b/Cuestionario.html
@@ -4,12 +4,16 @@
     <title>Cuestionario de ingles</title>
     <link rel="stylesheet" href="./cuestionario.css">
     <script src="./nota.js"></script>
+    <script src="./temporizador.js" defer></script>
 </head>
 
 <body>
+    <span class="temporizador">20:00</span>
     <img src="./pexels-hlorsdemir-31573401.jpg" alt="">
-    <h1>Bienvenido a el Cuestionario</h1>
+    <h1>Bienvenido a el Cuestionario</h1> 
     <br><br>
+
+    
     <div class="explicacion">
         <h3>Pronombres en Inglés</h3>
         <br>
